--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asephermann/capacitor-plugin-app-tracking-transparency",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Capacitor plugin to request user authorization to access app-related data for tracking the user or the device.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -54,9 +54,11 @@
     "test": "echo \"TODO: implement tests\""
   },
   "devDependencies": {
-    "@capacitor/core": "^5.0.0",
+    "@capacitor/android": "^5.0.4",
+    "@capacitor/cli": "^5.0.4",
+    "@capacitor/core": "^5.0.4",
     "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^5.0.0",
+    "@capacitor/ios": "^5.0.4",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
@@ -68,7 +70,7 @@
     "typescript": "~4.0.3"
   },
   "peerDependencies": {
-    "@capacitor/core": "^5.0.0"
+    "@capacitor/core": "^5.0.4"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
